# tournament-tracker

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  package-lock.json  package.json  vitest.config.js
.github/actions/check-coverage/: action.yml
.github/actions/generate-summary/: action.yml
.github/actions/run-tests/: action.yml
.github/workflows/: ci.yml  docker.yml
data/normalized/: significant_events.jsonl
data/normalized/074cdc24c6a7878c/: army_lists.jsonl  army_lists.jsonl.bak  army_lists.jsonl.pre-reclassify.bak  events.jsonl  placements.jsonl  placements.jsonl.pre-reclassify.bak
data/normalized/current/: army_lists.jsonl  army_lists.jsonl.bak  army_lists.jsonl.pre-reclassify.bak  (+3 more)
docker/: nginx.conf
docs/: 00_overview.md  01_build_plan.md  02_data_model.md  03_agents.md  04_storage_layout.md  05_api_spec.md  06_ops_and_scheduling.md  07_cicd_and_quality.md
src/: ingest.rs  lib.rs  main.rs
src/agents/: backend.rs  balance_watcher.rs  duplicate_detector.rs  event_scout.rs  fact_checker.rs  list_normalizer.rs  mod.rs  result_harvester.rs
src/api/: mod.rs  state.rs
src/calculate/: mod.rs
src/config/: mod.rs
src/fetch/: mod.rs
src/models/: army_list.rs  confidence.rs  epoch.rs  event.rs  ids.rs  mod.rs  pairing.rs  placement.rs  review.rs  significant_event.rs  stats.rs
src/storage/: jsonl.rs  mod.rs  parquet.rs
src/sync/: bcp.rs  convert.rs  discovery.rs  mod.rs  repartition.rs
static/: index.html
static/css/: style.css
static/js/: api.js  app.js  chart.js  events.js
tests/fixtures/: goonhammer_sample.html  warhammer_community_balance.html
(+37 files in other folders)
