[package]
name = "meta-agent"
version = "0.1.0"
edition = "2021"
description = "Local Warhammer 40k meta tracker with AI-powered extraction"
license = "MIT"
repository = "https://github.com/yourusername/meta-agent"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Hashing
sha2 = "0.10"
hex = "0.4"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# URL parsing
url = { version = "2", features = ["serde"] }

# File system
glob = "0.3"

# HTML parsing
scraper = "0.21"

# Parquet
parquet = { version = "53", features = ["async"] }
arrow = { version = "53" }

# Configuration
toml = "0.8"
config = "0.14"

# Async traits
async-trait = "0.1"

[dev-dependencies]
# Testing
tokio-test = "0.4"
tempfile = "3"
pretty_assertions = "1"

[features]
default = []
remote-ai = []  # Enable remote AI backends (OpenAI, Anthropic)

[[bin]]
name = "meta-agent"
path = "src/main.rs"

[lib]
name = "meta_agent"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
